--- a/app/views/task_runs/_form.html.erb
+++ b/app/views/task_runs/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :task_name %><br />
+    <%= f.text_field :task_name %>
   </div>
   <div class="field">
     <%= f.label :task_object_id %><br />
