--- a/app/views/task_runs/show.html.erb
+++ b/app/views/task_runs/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Name:</b>
-  <%= @task_run.name %>
+  <b>Task Name:</b>
+  <%= @task_run.task_name %>
 </p>
 
 <p>
@@ -18,6 +18,20 @@
 <p>
   <b>Task options hash:</b>
   <%= @task_run.task_options_hash %>
+</p>
+
+<p>
+  <b>Task log:</b>
+  <%= @task_run.task_log %>
+</p>
+
+<p>
+  <b>Associated Objects :</b>
+  <ul>
+    <% @task_run.object_mappings.each {|o|%>
+      <li><%= link_to o, o.to_s %></li>
+    <% } %>
+  </ul>
 </p>
 
 
