--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -25,10 +25,10 @@ function check(field) {
   <form name="task_runner" id="task_runner" action="/task_runner/run" method="POST"> 
   <input type="hidden" name="task_name" id="task_name" value="<%=@task.name%>"><br/>
   <input type="checkbox" name="Toggle" value="Toggle" onClick="check(document.task_runner)"><br/>
-  <% Object.all.each do |o|
-     next unless o.tasks.include? @task
+  <% @task.candidates.each do |o|
      r = "#{o.class.to_s.downcase}##{o.id}"
    %>
+
     <input id="<%=r%>" type="checkbox" name="objects[<%=r%>]" /><%=o%><br/>
     
   <% end %>
