--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>First name</th>
     <th>Last name</th>
-    <th>Alias</th>
+    <th>Username</th>
     <th>Organization</th>
     <th></th>
     <th></th>
@@ -15,7 +15,7 @@
   <tr>
     <td><%= user.first_name %></td>
     <td><%= user.last_name %></td>
-    <td><%= user.alias %></td>
+    <td><%= user.username %></td>
     <td><%= user.organization_id %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
