--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.label :account_name %><br />
+    <%= f.text_field :account_name %>
   </div>
   <div class="field">
-    <%= f.label :service %><br />
-    <%= f.text_field :service %>
+    <%= f.label :service_name %><br />
+    <%= f.text_field :service_name %>
   </div>
   <div class="field">
     <%= f.label :user_id %><br />
