--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -33,7 +33,7 @@
 </p>
 
 <p>
-<b>Tasks Runs:</b>
+<b>Task Runs:</b>
   <ul>
   <% @host.task_runs.each {|r|%>
     <li><%= link_to r, task_run_path(r.id)  %></li>
