slightly less clunky

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <b>User:</b>
-  <%= link_to @account.user_id, User.find_by_id @account.user_id %>
+  <%= show_user_path @account.user_id, User.find_by_id(@account.user_id) %>
 </p>
 
 
