move to multiple usernames / user

--- a/app/views/net_blocks/show.html.erb
+++ b/app/views/net_blocks/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <b>Description:</b>
+  <%= @net_block.description %>
+</p>
+
+<p>
 <b>Parents:</b>
   <ul>
   <% @net_block.parents.each {|p|%>
