--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -29,7 +29,7 @@ function check(field) {
      r = "#{o.underscore}##{o.id}"
    %>
 
-    <input id="<%=r%>" type="checkbox" name="objects[<%=r%>]" /><%=o%><br/>
+    <input id="<%=r%>" type="checkbox" name="objects[<%=r%>]" /><a href="<%=request.url%>/../../<%=o.underscore%>s/<%=o.id%>"><%=o.to_s%></a><br/>
     
   <% end %>
   <input id="submit" type="submit" /><br/>
