fixup issue encountered when creating a new user

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :usernames %><br />
-    <%= f.text_field :usernames, :value => @user.usernames.join(",") %>
+    <%= f.text_field :usernames, :value => @usernameS_array_or_nil  %>
   </div>
   <div class="field">
     <%= f.label :organization_id %><br />
