add some meta to the account searching, and do some cleanup around accounts / usernames / users

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -20,6 +20,14 @@
     <%= f.text_field :service_name %>
   </div>
   <div class="field">
+    <%= f.label :web_uri %><br />
+    <%= f.text_field :web_uri %>
+  </div>
+  <div class="field">
+    <%= f.label :check_uri %><br />
+    <%= f.text_field :check_uri %>
+  </div>
+  <div class="field">
     <%= f.label :user_id %><br />
     <%= f.number_field :user_id %>
   </div>
