add task runs to the users page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,5 +52,14 @@
   </ul>
 </p>
 
+<p>
+<b>Task Runs:</b>
+  <ul>
+  <% @host.task_runs.each {|r|%>
+    <li><%= link_to r, task_run_path(r.id)  %></li>
+  <% } %>
+  </ul>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
