--- a/app/views/parsable_files/show.html.erb
+++ b/app/views/parsable_files/show.html.erb
@@ -15,6 +15,42 @@
   <%= @parsable_file.path %>
 </p>
 
+<p>
+<b>Parents:</b>
+  <ul>
+  <% @parsable_file.parents.each {|p|%>
+    <li><%= link_to p, eval("#{p.underscore}_path(p)")  %></li>
+  <% } %>
+  </ul>
+</p>  
+
+<p>
+<b>Children:</b>
+  <ul>
+  <% @parsable_file.children.each {|c|%>
+    <li><%= link_to c, eval("#{c.underscore}_path(c)")  %></li>
+  <% } %>
+  </ul>
+</p>
+
+<p>
+<b>Tasks:</b>
+  <ul>
+  <% @parsable_file.tasks.each {|t|%>
+    <li><%= link_to t, eval("#{t.underscore}_path(t.name)")  %></li>
+  <% } %>
+  </ul>
+</p>
+
+<p>
+<b>Task Runs:</b>
+  <ul>
+  <% @parsable_file.task_runs.each {|r|%>
+    <li><%= link_to r, task_run_path(r.id)  %></li>
+  <% } %>
+  </ul>
+</p>
+
 
 <%= link_to 'Edit', edit_parsable_file_path(@parsable_file) %> |
 <%= link_to 'Back', parsable_files_path %>
