tweaked to add delete to the show.html.erb pages, and an update to the readme from @pipes

--- a/app/views/findings/show.html.erb
+++ b/app/views/findings/show.html.erb
@@ -34,4 +34,5 @@
 
 
 <%= link_to 'Edit', edit_finding_path(@finding) %> |
+<%= link_to "Destroy", @finding, :confirm => 'Are you sure?', :method => :delete %>
 <%= link_to 'Back', findings_path %>
