--- a/app/views/net_svcs/show.html.erb
+++ b/app/views/net_svcs/show.html.erb
@@ -44,4 +44,5 @@
 
 
 <%= link_to 'Edit', edit_net_svc_path(@net_svc) %> |
+<%= link_to "Destroy", @net_svc, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', net_svcs_path %>
