--- a/app/views/physical_locations/show.html.erb
+++ b/app/views/physical_locations/show.html.erb
@@ -76,4 +76,5 @@
 </p>
 
 <%= link_to 'Edit', edit_physical_location_path(@physical_location) %> |
+<%= link_to "Destroy", @physical_location, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', physical_locations_path %>
