--- a/app/views/task_runs/show.html.erb
+++ b/app/views/task_runs/show.html.erb
@@ -36,4 +36,5 @@
 
 
 <%= link_to 'Edit', edit_task_run_path(@task_run) %> |
+<%= link_to "Destroy", @task_run, :confirm => 'Are you sure?', :method => :delete %>
 <%= link_to 'Back', task_runs_path %>
