--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -28,4 +28,5 @@
 
 
 <%= link_to 'Edit', edit_account_path(@account) %> |
+<%= link_to "Destroy", @account, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', accounts_path %>
