--- a/app/views/domains/show.html.erb
+++ b/app/views/domains/show.html.erb
@@ -92,4 +92,5 @@
 </p>
 
 <%= link_to 'Edit', edit_domain_path(@domain) %> |
+<%= link_to "Destroy", @domain, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', domains_path %>
