--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -42,4 +42,5 @@
 </p>
 
 <%= link_to 'Edit', edit_host_path(@host) %> |
+<%= link_to "Destroy", @host, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', hosts_path %>
