--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -45,4 +45,5 @@
 
 
 <%= link_to 'Edit', edit_image_path(@image) %> |
+<%= link_to "Destroy", @image, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', images_path %>
