--- a/app/views/net_blocks/show.html.erb
+++ b/app/views/net_blocks/show.html.erb
@@ -38,4 +38,5 @@
 </p>
 
 <%= link_to 'Edit', edit_net_block_path(@net_block) %> |
+<%= link_to "Destroy", @net_block, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', net_blocks_path %>
