--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -38,4 +38,5 @@
 </p>
 
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
+<%= link_to "Destroy", @organization, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', organizations_path %>
