--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,4 +62,5 @@
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
+<%= link_to "Destroy", @user, :confirm => 'Are you sure?', :method => :delete %> |
 <%= link_to 'Back', users_path %>
