--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,5 +3,11 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require_tree . 
-*/
+ *= require_tree .
+ *= require dataTables/jquery.dataTables
+*/  
+
+@import "bootstrap";
+
+/* compensate the overlap caused by bootstrap top navigation, min. 40px at the top! */
+body { padding: 60px 10px 10px 10px; }
