--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Reports</h1>
-<a href="reports/google_default"> Google Map </a>
-
+<ul>
+  <li><a href="reports/list_all"> List All </a></li>
+  <li><a href="reports/google_default"> Google Map </a></li>
+<ul>
