--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -22,7 +22,7 @@ function check(field) {
 
 <p>
   <b>Objects:</b><br/>
-  <form name="task_runner" id="task_runner" action="/task_runner/run" method="POST"> 
+  <form name="task_runner" id="task_runner" action="/task_runner" method="POST"> 
   <input type="hidden" name="task_name" id="task_name" value="<%=@task.name%>"><br/>
   <input type="checkbox" name="Toggle" value="Toggle" onClick="check(document.task_runner)"><br/>
   <% @task.candidates.each do |o|
